force-app/main/default/objects/Split_Job_Update__e/Split_Job_Update__e.object-meta.xml
<CustomObject>
    <description>Streams Split_Job progress to the documentSplitter LWC. Published as each async stage commits its work.</description>
    <label>Split Job Update</label>
    <pluralLabel>Split Job Updates</pluralLabel>
</CustomObject>