force-app/main/default/objects/Split_Job_Update__e/fields/Documents_Created__c.field-meta.xml
<CustomField>
    <fullName>Documents_Created__c</fullName>
    <description>Running count of split files saved so far.</description>
    <inlineHelpText>Running count of files saved so far. Incremented by each SplitSaveQueueable batch so the LWC can show live progress.</inlineHelpText>
    <label>Documents Created</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>