force-app/main/default/objects/Split_Job_Update__e/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <description>Id of the Split_Job__c record this update belongs to.</description>
    <inlineHelpText>Id of the Split_Job__c this update belongs to. The documentSplitter LWC filters its empApi subscription on this field so each browser tab only sees its own job.</inlineHelpText>
    <label>Job Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>