force-app/main/default/objects/Split_Job_Update__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Human-readable message for the LWC, e.g. "Detected 3 segments" or an error reason.</description>
    <inlineHelpText>Human-readable message for the LWC — e.g. "Detected 3 segments" on progress or the exception text on an Error event. 255-char cap; long detail goes on Split_Job__c.Error_Detail__c instead.</inlineHelpText>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>