force-app/main/default/objects/Split_Job_Update__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current stage of the split job (matches Split_Job__c.Status__c picklist values).</description>
    <inlineHelpText>Current lifecycle stage of the job, matching Split_Job__c.Status__c. Used by the LWC to drive its progress UI.</inlineHelpText>
    <label>Status</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>