force-app/main/default/objects/Split_Job_Update__e/fields/Summary_JSON__c.field-meta.xml
<CustomField>
    <fullName>Summary_JSON__c</fullName>
    <description>Optional payload — used on the final Complete event to send the type-breakdown JSON to the LWC.</description>
    <inlineHelpText>Populated only on the final Complete event with the full type breakdown JSON. Blank on intermediate progress events to keep the payload small.</inlineHelpText>
    <label>Summary JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>